--- a/run_sagemaker.ipynb
+++ b/run_sagemaker.ipynb
@@ -226,6 +226,9 @@
     "s3_directory = 's3://scsk-data/lionel/brats'\n",
     "train_input_channel = sagemaker.session.s3_input(s3_directory, distribution='FullyReplicated',  s3_data_type='S3Prefix')\n",
     "\n",
+    "# checkpoint uri for spot training\n",
+    "checkpoint_s3_uri = 's3://scsk-data/lionel/checkpoints/' + repo_name\n",
+    "\n",
     "# Define image name, output path to save model \n",
     "output_path = 's3://scsk-data/ocr_data/output/lionel'\n",
     "image_name  = '{}.dkr.ecr.{}.amazonaws.com/{}:latest'.format(account, region, repo_name)\n",
@@ -709,7 +712,8 @@
     "                       train_instance_type=train_instance_type,\n",
     "                       output_path=output_path,\n",
     "                       train_max_run=train_max_run,\n",
-    "                       sagemaker_session=sess)\n",
+    "                       sagemaker_session=sess,\n",
+    "                       checkpoint_s3_uri=)\n",
     "\n",
     "estimator.fit({'train': train_input_channel})"
    ]
@@ -753,6 +757,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.5"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
