update reload checkpoint for spot instance

--- a/run_sagemaker.ipynb
+++ b/run_sagemaker.ipynb
@@ -713,7 +713,7 @@
     "                       output_path=output_path,\n",
     "                       train_max_run=train_max_run,\n",
     "                       sagemaker_session=sess,\n",
-    "                       checkpoint_s3_uri=)\n",
+    "                       checkpoint_s3_uri=checkpoint_s3_uri)\n",
     "\n",
     "estimator.fit({'train': train_input_channel})"
    ]
